# MTBirb

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_trail_detail_fields.py  0003_catalog_trails.py  0004_catalog_line_geom.py  0005_catalog_trail_metrics.py  0006_sighting_is_notable.py  0007_trips.py  0008_trip_photos.py  0009_catalog_terrain_surface.py  0010_trail_photos.py  0011_ebird_taxa.py
backend/app/: config.py  main.py  seed.py  seed_catalog.py  seed_sample.py
backend/app/data/: catalog_sample.json
backend/app/integrations/: birdnet.py  ebird.py  elevation.py  osm.py  precipitation.py  tomtom.py  trailapi.py  weather.py
backend/app/models/: __init__.py  catalog_trail.py  ebird_taxon.py  sighting.py  trail.py  trail_photo.py  trip.py
backend/app/routers/: birdnet.py  catalog.py  map.py  sources.py  trails.py  trips.py  wildlife.py
backend/app/schemas/: catalog.py  trail.py  trip.py
backend/app/services/: catalog_geometry.py  drive_route.py  gpx.py  optimal_ride_time.py  solar.py  species_taxonomy.py  trail_catalog.py  trail_conditions.py  trail_geometry.py  trail_metrics.py  trail_photos.py  trail_surface.py  wildlife_likelihood.py  wildlife_sync.py
backend/tests/: test_birdnet.py  test_catalog_geometry.py  test_drive_route.py  test_gpx.py  test_optimal_ride_time.py  test_seasonality.py  test_solar.py  test_species_taxonomy.py  test_trail_catalog.py  test_trail_conditions.py  test_trail_metrics.py  test_trail_photos.py  test_trail_sources.py  test_trail_surface.py  test_trails.py  test_trips.py  test_wildlife_score.py  test_wildlife_sync.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/assets/: README.md
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BackButton.tsx  BirdIdFab.tsx  BottomNav.module.css  BottomNav.tsx  CenterMessage.module.css  CenterMessage.tsx  DifficultyMarker.tsx  LogRideSheet.tsx  Photo.tsx  ProfileSheet.tsx  ScoreRing.tsx  SearchField.tsx  TrailPhotoMap.tsx  icons.tsx
frontend/src/data/: TrailsProvider.tsx  audio.ts  greeting.ts  photo.ts  profile.ts  trails.ts  useCatalogDetail.ts  useCatalogTrails.ts  useDriveRoute.ts  useGeolocation.ts  useNearbySpecies.ts  useOptimalNow.ts  useOptimalTime.ts  useSpeciesSearch.ts  useSpeciesTrails.ts  useTrailSearch.ts  useTrailWeather.ts  useTrailWildlife.ts  useTrips.ts
frontend/src/screens/: BirdIdScreen.module.css  BirdIdScreen.tsx  CatalogDetailScreen.module.css  CatalogDetailScreen.tsx  CatalogScreen.module.css  CatalogScreen.tsx  DiscoverScreen.module.css  DiscoverScreen.tsx  FunDriveNavScreen.module.css  FunDriveNavScreen.tsx  OptimalTimeScreen.module.css  OptimalTimeScreen.tsx  TargetingScreen.module.css  TargetingScreen.tsx  TrailDetailScreen.module.css  TrailDetailScreen.tsx  TrailsScreen.module.css  TrailsScreen.tsx  TripsScreen.tsx  (+3 more)
(+5 files in other folders)
