[project]
name = "mtbirb-backend"
version = "0.1.0"
description = "MTBirb API: trail discovery scored for wildlife/birding potential"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Local BirdNET sound-ID inference (see app/integrations/birdnet.py). Heavy + optional; the API
# runs without it (the /birdnet endpoint returns 503). numpy<2 because tflite-runtime is built
# against the numpy 1.x ABI. tflite-runtime has Linux wheels only, so on Windows/macOS we use
# tensorflow-cpu instead (birdnetlib auto-detects whichever is installed).
birdnet = [
    "birdnetlib>=0.18",
    "librosa>=0.10",
    "numpy<2",
    "tflite-runtime>=2.14; platform_system == 'Linux'",
    "tensorflow-cpu>=2.15; platform_system != 'Linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
